--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./build/js/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init:tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/main.css --watch"
   },
   "author": "",
   "license": "ISC",
